# clippy-tracing

./: Cargo.toml  README.md
.github/workflows/: release-please.yml  rust.yml
clippy-tracing/: CHANGELOG.md  Cargo.toml
clippy-tracing-attributes/: Cargo.toml
clippy-tracing-attributes/src/: lib.rs
clippy-tracing-attributes/tests/: integration_tests.rs
clippy-tracing/src/: main.rs  test.rs
clippy-tracing/tests/: integration_tests.rs
src/: main.rs
