[package]
name = "clippy-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.17", features = ["full", "extra-traits", "visit", "visit-mut", "printing"] } 
clap = { version = "4.3.2", features = ["derive"] }
walkdir = "2.3.3"
proc-macro2 = "1.0.59"
quote = "1.0.28"